retrieveUnpackaged/objects/Monitoring_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Supplement_Check_Vulnerable_Pops_Acce__c</fullName>
        <label>Supplement Check-Vulnerable Pops. Acce</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Support_Program_Amount__c</fullName>
        <label>Support/Program Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Systems_to_Oversee_Proj_Performance__c</fullName>
        <label>Systems to Oversee Proj. Performance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_and_Attendance_Function__c</fullName>
        <label>Time and Attendance Function</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timekeeping_Practices_Compliant__c</fullName>
        <label>Timekeeping Practices Compliant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timely_Reports_from_Accounting_System__c</fullName>
        <label>Timely Reports from Accounting System</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timely_response_from_Intermediary__c</fullName>
        <label>Timely response from Intermediary?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timesheets_accurately_divide_time__c</fullName>
        <label>Timesheets accurately divide time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timesheets_signed_by_staff_supervisor__c</fullName>
        <label>Timesheets signed by staff/supervisor</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timesheets_track_actual_time__c</fullName>
        <label>Timesheets track actual time</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_Voucher_All_Inclusive__c</fullName>
        <label>Travel Voucher All Inclusive</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Project__c</fullName>
        <label>Type of Project</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSVP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FGP Fixed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCP Fixed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SDP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VISTA_Assignment_Description__c</fullName>
        <label>VISTA Assignment Description</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VSY_Reduction_Comments__c</fullName>
        <label>VSY Reduction Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VSY_Reduction_policy__c</fullName>
        <label>VSY Reduction policy?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VSY_Variance__c</fullName>
        <label>VSY Variance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VSYs_budgeted__c</fullName>
        <label>VSYs budgeted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verified_Required_Check__c</fullName>
        <label>Verified Required Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verify_cost_of_check_paid_by_program__c</fullName>
        <label>Verify cost of check paid by program</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Assignments_Offered_Year_Rou__c</fullName>
        <label>Volunteer Assignments Offered Year Rou</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Check_Policies_Comments__c</fullName>
        <label>Volunteer Check Policies Comments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Expenses_Variance__c</fullName>
        <label>Volunteer Expenses Variance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Expenses__c</fullName>
        <label>Volunteer Expenses</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_NSC_History_Check_Comments__c</fullName>
        <label>Volunteer NSC History Check Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_NSC_History_Checks_Conducted__c</fullName>
        <label>Volunteer NSC History Checks Conducted</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Recognition_Description__c</fullName>
        <label>Volunteer Recognition Description</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Satisfaction_Comments__c</fullName>
        <label>Volunteer Satisfaction Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteers_on_Outcome_Based_Assign__c</fullName>
        <label>Volunteers on Outcome-Based Assign.</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteers_satisfied_with_assignments__c</fullName>
        <label>Volunteers satisfied with assignments</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Plan_Goals_Comments__c</fullName>
        <label>Work Plan Goals Comments</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Plan_Goals_Objectives_Shift__c</fullName>
        <label>Work Plan Goals &amp; Objectives Shift?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Plans_w_Performance_Measures__c</fullName>
        <label>Work Plans w/ Performance Measures</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_prior_to_NSOPW_check__c</fullName>
        <label>Work prior to NSOPW check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_prior_to_State_FBI_Check__c</fullName>
        <label>Work prior to State/FBI Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Written_Authorization_Received_for_Che__c</fullName>
        <label>Written Authorization Received for Che</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year_1_VSY_Variance__c</fullName>
        <label>Year 1 VSY Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_2_VSY_Variance__c</fullName>
        <label>Year 2 VSY Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_3_VSY_Variance__c</fullName>
        <label>Year 3 VSY Variance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Monitoring Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000000}</displayFormat>
        <label>Monitoring Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>